# hackathon2

./: App.js  PROJECT_RULES.md  app.json  package-lock.json  package.json  tailwind.config.js
app/: _layout.js  index.js  results.js  upload.js
app/auth/: _layout.js  index.js  register.js
app/questions/: _layout.js  index.js  quiz.js  review.js
components/: Button.js  Card.js  Input.js  LoadingSpinner.js  index.js
fastapi-service/: README.md  main.py  pyproject.toml
fastapi-service/app/: __init__.py
fastapi-service/app/core/: auth.py  config.py  utils.py
fastapi-service/app/services/: text_extraction.py
lib/: gemini.js  index.js  supabase.js  utils.js
